# Bonehawk

./: .gitignore  CLAUDE.md  README.md  env.template  pyproject.toml  requirements.txt
assets/: app_icon.icns
config/: autopilot.example.json  daily_schedule.example.json  market_universe.example.json  watchlist.example.json
memory/: PROJECT-CONTEXT.md  RESEARCH-LOG.md  TRADE-LOG.md  TRADING-STRATEGY.md  WEEKLY-REVIEW.md
routines/: README.md  execute.md  manage.md  panic-check.md  research-and-plan.md  weekly-review.md
scripts/: __init__.py  agentic_autotrader.py  alpaca_connector.py  autopilot.py  build_desktop_app.py  build_market_universe.py  command_center.py  daily_scheduler.py  dashboard.py  decision_log.py  desktop_app.py  growth_scanner.py  importnacl.py  market_hours.py  market_intel.py  market_scanner.py  market_universe.py  packaged_smoke.py  paper_cycle.py  portfolio_sync.py  postmortem_report.py  private_beta_check.py  quotes.py  readiness.py  research.sh  robinhood.py  robinhood_agentic.py  robinhood_integration.py  robinhood_smoke.py  robinhood_stock_connector.py  telegram.sh  telegram_autopilot.py  trade_ideas.py  trading_desk.py
tests/: test_agentic_autotrader.py  test_alpaca_connector.py  test_autopilot.py  test_command_center.py  test_daily_scheduler.py  test_dashboard.py  test_decision_log.py  test_desktop_app.py  test_desktop_build.py  test_growth_scanner.py  test_market_intel.py  test_market_scanner.py  test_market_universe.py  test_packaged_smoke.py  test_paper_cycle.py  test_portfolio_sync.py  test_postmortem_report.py  test_quotes.py  (+10 more)
(+1 files in other folders)
