[project]
name = "bonehawk"
version = "0.1.0"
description = "AI trading dashboard with Robinhood Crypto integration, market scanning, and Telegram notifications."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pynacl>=1.5.0",
  "python-dotenv>=1.0.0",
  "pywebview>=5.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]
desktop = [
  "pyinstaller>=6.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov=scripts --cov-report=term-missing --cov-fail-under=80"
pythonpath = ["."]
testpaths = ["tests"]
